# AemetNew

./: README.md
aemet/: Dockerfile  LICENSE  README.md  config.json  pyproject.toml
aemet/app/: aemet.py  app.py
aemet/data/: 05017.json  08017.json  08019.json
aemet/tests/: test_aemet.py
