[tool.poetry]
name = "aemet"
version = "0.1.0"
description = ""
authors = ["David de Mingo <david@optersoft.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^2.2.3"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
